# osm2pgsql-tuner

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  run_server.py  setup.py
docs/: conf.py  index.rst
osm2pgsql_tuner/: __init__.py  config.py  forms.py  osm2pgsql.py  routes.py  tuner.py
osm2pgsql_tuner/templates/: _footer.html  _page_header.html
tests/: osm2pgsql_test.py  routes_test.py  test_params.py  tuner_test.py
webapp/: __init__.py  config.py  forms.py  osm2pgsql.py  routes.py
webapp/templates/: _footer.html  _layout_header.html  about.html  index.html  layout.html  recommendation.html
