[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "osm2pgsql-tuner"
version = "0.1.0"
authors = [
  { name="RustProof Labs", email="support@rustprooflabs.com" },
]
description = "osm2pgsql-tuner project recommends an osm2pgsql command based on available system resources and the size of the input PBF file."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rustprooflabs/osm2pgsql-tuner"
Issues = "https://github.com/rustprooflabs/osm2pgsql-tuner/issues"